User login/register: admin/user. Sub-task of #2 #17

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <section class="header-main border-bottom">
       <div class="container-fluid">
           <div class="row align-items-center">
-              <div class="col-lg-3 col-sm-4 col-md-4 col-5"> <a href="#" class="brand-wrap" data-abc="true">
+              <div class="col-lg-3 col-sm-4 col-md-4 col-5"> <a href="/" class="brand-wrap" data-abc="true">
                       <!-- <img class="logo" src="http://ampexamples.com/data/upload/2017/08/bootstrap2_logo.png"> --> <span class="logo">Amazon</span> </a> </div>
               <div class="col-lg-4 col-xl-5 col-sm-8 col-md-4 d-none d-md-block">
                   <form action="#" class="search-wrap">
@@ -68,7 +68,7 @@
               </div>
               <div class="col-lg-5 col-xl-4 col-sm-8 col-md-4 col-7">
                   <div class="d-flex justify-content-end">
-                      <a target="_blank" href="#" data-abc="true" class="nav-link widget-header" style ="color: white">Login</a>
+                      <a href="/login.html" data-abc="true" class="nav-link widget-header" style ="color: white">Login</a>
                       <span class="vl"></span>
                       <a class="nav-link nav-icons widget-header" href="#" id="navbarDropdownMenuLink1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-abc="true" style="color: white">
                           My Cart
