Frontend footer for the Homepage. Sub-task of #8 #10

--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link rel="stylesheet" href="header.css">
         <link rel="stylesheet" href="login.css">
+        <link rel="stylesheet" href="footer.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -72,7 +73,7 @@
         </nav>
       </header>
 
-      <div id="logreg-forms">
+      <div id="logreg-forms" style="margin-top: 11rem;">
         <form class="form-signin">
             <h1 class="h3 mb-3 font-weight-normal" style="text-align: center"> Sign in</h1>
             <div class="social-login">
@@ -118,6 +119,34 @@
             <br>
             
     </div>
+    <footer>
+        <div class="real-footer">
+          <p><a href="#">Contact us</a></p>
+          <div class="socials">
+            <a href="#"><img src="/imgs//facebook (3).png"></a>
+            <a href="#"><img src="/imgs/instagram (1).png"></a>
+            <a href="#"><img src="/imgs/twitter (3).png"></a>
+          </div>
+          <div class="footer-texts">
+
+          </div>
+        </div>
+        <div class="footer footer-signin">
+          <div class="foot-sign-in"> 
+  
+              <div call-to-action></div>
+              <div class="sign-in-title" style="text-align: center;">
+
+              <button class=" button button1" width="50px"><strong><a href="/login.html" style="color: black; text-decoration: none; ">Sign in</a></strong></button>
+  
+              <div style="color: white;">
+                  New customer? <a href="/login.html" style="color: white; ">Start here.</a>
+              </div>
+          </div>
+          </div>
+          
+        </div>
+      </footer>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
